--- a/SolarSystem.css
+++ b/SolarSystem.css
@@ -24,8 +24,8 @@ h1{
     width: 5%;
     height: auto;
     position: absolute;
-    top:50%;
-    left: 50%;
+    /* top:50%;
+    left: 50%; */
 
 }
 
