--- a/SolarSystem.css
+++ b/SolarSystem.css
@@ -1,8 +1,3 @@
-html{
-    height: 100%;
-    background: radial-gradient(#3e3c70, #01000c);   
-}
-
 h1{
     color:rgb(175, 240, 255)
 }
@@ -10,26 +5,6 @@ h1{
 .end{
     text-align: end;
 }
-
-
-#carte{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-}
-
-#soleil{
-    width: 5%;
-    height: auto;
-    position: absolute;
-    /* top:50%;
-    left: 50%; */
-
-}
-
-
 
 body{
     background-image: ("https://c.pxhere.com/photos/1a/9d/stars_background_blue_photoshop_color_space_sky_dark-610854.jpg!d") ;
@@ -112,6 +87,6 @@ body{
     width: 5%;
     height: auto;
     position: absolute;
-    top:%;
+    top: 5%;
     left: 5%; 
 }
